--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 
 	"scripts": {
-		"test": "node test.js"
+		"test": "tape test/*.js"
 	},
 
 	"dependencies": {
@@ -22,5 +22,6 @@
 	},
 
 	"devDependencies": {
+		"tape": "~2.13.3"
 	}
 }
