Trying out coveralls support

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	},
 
 	"scripts": {
-		"test": "tape test/*.js"
+		"test": "tape test/*.js",
+		"test-travis": "istanbul cover test/*.js --report lcovonly"
 	},
 
 	"dependencies": {
